@@ -1,3 +1,7 @@
+2004-02-16  ujwal
+
+	* Forcing update in texview drawRect until drawing issue is resolved.
+
 2004-02-14  ujwal
 
 	* Fixed bug in VT100Screen: setString when text wraps.
